main-page publising

--- a/index.html
+++ b/index.html
@@ -101,6 +101,125 @@
         </div>
       </section>
       <!-- video 끝 -->
+      <section class="sc_uber sc">
+        <div class="title">
+          <span>BECAUSE WE LOVE COFFEE</span>
+          <h2>Über uns</h2>
+          <div class="divider_line"></div>
+          <p class="uber_text">
+            Coffee Science ist eine privat geführte Informations-Plattform für
+            Kaffeeliebhaber, Barista<br />
+            und diejenigen, die auf dem Weg dahin sind.
+          </p>
+          <p class="uber_text1">
+            Bei uns lernst Du, wie du deinen Lieblingskaffee perfekt
+            zubereitest.<br />
+            Dabei ist es uns wichtig, dass Du nicht nur die nötigen Handgriffe
+            kennenlernst, sondern<br />
+            auch verstehst, worauf es z.B. bei der richtigen Kaffee-Wahl
+            ankommt.
+          </p>
+          <p class="uber_text2">
+            Kaffee ist nicht nur eine braune Bohne (Kirsche) sondern so viel
+            mehr!
+          </p>
+        </div>
+
+        <ul class="mehr_wrap">
+          <li>
+            <span>KAFFEEWISSEN</span>
+            <h3>
+              Insights aus der großen<br />
+              weiten Kaffeewelt
+            </h3>
+            <div class="line"></div>
+            <a href="#" class="mehr_btn"> Mehr erfahren </a>
+          </li>
+
+          <li>
+            <span>ZUBEREITUNG</span>
+            <h3>Rezepte für den perfekten Kaffee-Genuss</h3>
+            <div class="line"></div>
+            <a href="#" class="mehr_btn">Mehr lernen</a>
+          </li>
+
+          <li>
+            <span>ZUBEHÖR</span>
+            <h3>Umfangreiche Tipps rund um Kaffee-Zubehör</h3>
+            <div class="line"></div>
+            <a href="#" class="mehr_btn">Mehr lesen</a>
+          </li>
+        </ul>
+      </section>
+      <!-- mehr_wrap 종료 -->
+      <section class="sc_uns">
+        <div class="uns_text">
+          <h2>Folge uns</h2>
+          <p>Lerne alles zum Thema Kaffee auf unserem Insta-Kanal</p>
+        </div>
+        <ul class="uns_wrap">
+          <li>
+            <a href="#"><img src="./asets/images/sns1.jpg" alt="" /></a>
+            <a href="#"><img src="./asets/images/sns2.jpg" alt="" /></a>
+            <a href="#"><img src="./asets/images/sns3.jpg" alt="" /></a>
+          </li>
+          <li>
+            <a href="#"><img src="./asets/images/sns4.jpg" alt="" /></a>
+            <a href="#"><img src="./asets/images/sns5.jpg" alt="" /></a>
+            <a href="#"><img src="./asets/images/sns6.jpg" alt="" /></a>
+          </li>
+          <li>
+            <a href="#"><img src="./asets/images/sns7.jpg" alt="" /></a>
+            <a href="#"><img src="./asets/images/sns8.jpg" alt="" /></a>
+            <a href="#"><img src="./asets/images/sns9.jpg" alt="" /></a>
+          </li>
+        </ul>
+
+        <div class="newsletter_wrap">
+          <h4>Newsletter müssen nicht nervig sein!</h4>
+          <p>
+            Trage dich für den <span>Coffee Science Kaffee-Brief</span> ein und
+            erhalte regelmäßig spannende & heiße News direkt in dein Postfach!
+            Wir spamen dich nicht zu, versprochen!
+          </p>
+          <input type="text" placeholder="E-Mail" />
+          <button type="button">ABONNIEREN</button>
+        </div>
+      </section>
+      <footer>
+        <div class="footer_widget_wrap">
+          <div class="img_wrap">
+            <img
+              src="./asets/images/coffeesicence-removebg-preview.png"
+              alt=""
+            />
+          </div>
+          <aside>
+            <ul>
+              <li><a href="#">Impressum</a></li>
+              <li><a href="#">Datenschutz</a></li>
+              <li><a href="#">Freunde & Partner</a></li>
+            </ul>
+          </aside>
+          <div class="follow_wrap">
+            <h2>Follow us</h2>
+            <div class="follow_sns">
+              <a href="#">
+                <i class="fa-brands fa-instagram"></i>
+              </a>
+              <a href="#">
+                <i class="fa-brands fa-facebook-f"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="footer_info_wrap">
+          <div class="footer_text">
+            © 2022 COFFEE SCIENCE. ALL RIGHTS RESERVED.
+          </div>
+          <div class="footer_text">BECAUSE WE LOVE COFFEE</div>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
