--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
       src="https://kit.fontawesome.com/a069bd7605.js"
       crossorigin="anonymous"
     ></script>
-    <script src="./js/index.js"></script>
   </head>
   <body>
     <div class="wrapper">
@@ -46,7 +45,8 @@
             <h1>
               <a href="#" class="logo">
                 <img
-                  src="./asets/images/coffeesicence-removebg-preview.png"
+                  class="logo_img"
+                  src="./asets/images/logo-before.png"
                   alt="coffee science 로고"
                 />
                 <span class="blind">Logo</span>
@@ -221,5 +221,7 @@
         </div>
       </footer>
     </div>
+    <!-- Js -->
+    <script src="./js/index.js"></script>
   </body>
 </html>
