--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
   </head>
   <body>
     <div class="wrapper">
+      <!-- header_search 시작 -->
+      <div class="search_content">
+        <div class="input_box">
+          <input type="text" placeholder="Search here" />
+          <p>Type and press Enter</p>
+        </div>
+        <i class="fa-solid fa-xmark close"></i>
+      </div>
+      <!-- header_search 종료 -->
       <header>
         <ul class="sns">
           <li>
