--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           </div>
 
           <ul class="nav">
-            <li><a href="#">Magazin</a></li>
+            <li><a href="./magazin.html">Magazin</a></li>
             <li>
               <a href="#">
                 Kaffeewissen
