--- a/magazin.html
+++ b/magazin.html
@@ -32,6 +32,9 @@
       src="https://kit.fontawesome.com/a069bd7605.js"
       crossorigin="anonymous"
     ></script>
+    <!-- GSAP -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
   </head>
   <body>
     <div class="wrapper">
@@ -70,7 +73,7 @@
               <a href="./index.html" class="logo">
                 <img
                   class="logo_img"
-                  src="./asets/images/logo-before.png"
+                  src="./asets/images/logo-after.png"
                   alt="coffee science 로고"
                 />
 
