--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@
             erhalte regelmäßig spannende & heiße News direkt in dein Postfach!
             Wir spamen dich nicht zu, versprochen!
           </p>
-          <input type="text" placeholder="E-Mail" />
-          <button type="button">ABONNIEREN</button>
+          <input type="email" placeholder="E-Mail" />
+          <button type="submit">ABONNIEREN</button>
         </div>
       </section>
       <footer>
